[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-testing-documentation"
version = "0.1.0"
requires-python = ">=3.12"
authors = [
  {name = "Cavernos", email = "louisdescavernes@gmail.com"}
]
description = "This little lib provide auto testing documentation for unittest TestCase"
readme = "README.md"
#license = "Apache-2.0"
#license-files = ["LICEN[CS]E.*"]
keywords = ["unittest", "documentation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
[project.optional-dependencies]
build = ['build']

[tool.setuptools]
package-dir = {"auto_testing_documentation" = "src"}

[project.urls]
Documentation = "https://github.com/Cavernos/AutoTestingDocumention.git/README.md"
Repository = "https://github.com/Cavernos/AutoTestingDocumention.git"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
